--- a/code/1-basic-ml-demo/E2E_ML_101.yaml
+++ b/code/1-basic-ml-demo/E2E_ML_101.yaml
@@ -15,11 +15,18 @@ resources:
             notebook_path: /Repos/caio.moreno@databricks.com/databricks-ml-101/code/1-basic-ml-demo/1-Ingest_Data
             source: WORKSPACE
           existing_cluster_id: 0904-111436-kact9l5w
-        - task_key: Train_and_Register_ML_Model
+        - task_key: Train_Register_ML_Model_LR
           depends_on:
             - task_key: Ingest_Data
           notebook_task:
-            notebook_path: /Repos/caio.moreno@databricks.com/databricks-ml-101/code/1-basic-ml-demo/2-Train_and_Register_ML_Model
+            notebook_path: /Repos/caio.moreno@databricks.com/databricks-ml-101/code/1-basic-ml-demo/2-Train_and_Register_ML_Model_LR
+            source: WORKSPACE
+          existing_cluster_id: 0904-111436-kact9l5w
+        - task_key: Train_Register_ML_Model_RF
+          depends_on:
+            - task_key: Ingest_Data
+          notebook_task:
+            notebook_path: /Repos/caio.moreno@databricks.com/databricks-ml-101/code/1-basic-ml-demo/2.1-Train_and_Register_ML_Model_RF
             source: WORKSPACE
           existing_cluster_id: 0904-111436-kact9l5w
       git_source:
